--- a/tutorial/0-models-and-events.html
+++ b/tutorial/0-models-and-events.html
@@ -54,7 +54,7 @@ myTweet.set('message', 'Hello, world!');
 /* Using the reference, get the message attribute of the model and display it:
  * http://backbonejs.org/#Model-get */
 
-// window.alert(YOUR CODE HERE);
+window.alert(myTweet.get('message'));
 
 /* - Backbone EVENTS ----------------------------------------------------------
  * Backbone gives us the ability to listen for events on our models,
@@ -72,8 +72,7 @@ myTweet.set('message', 'Hello, world!');
  * an attribute is added to the model, is deleted, or is changed.
  *
  * Before we listen for our first event, take a gander at the reference:
- * http://backbonejs.org/#Events-on
- */
+ * http://backbonejs.org/#Events-on/
 
 /* Listen for our model's `change` event: */
 myTweet.on('change',
@@ -83,7 +82,9 @@ myTweet.on('change',
     console.log(e);
 
     // Write code to log the changed attribute:
-    // console.log(YOUR CODE HERE);
+    for (var k in e.attributes) {
+      console.log('changed attribute: ', k)
+    }
   }
 );
 
@@ -96,7 +97,7 @@ myTweet.on('change',
  * by the framework. Review these now (at http://backbonejs.org/#Model-set)
  * and write a one-liner that will make our `change` listener fire: */
 
-// myTweetYOUR CODE HERE;
+myTweet.set('message', 'whaddup');
 
 /* Once you have the `change` event firing, move on to rendering! */
   </script>
